--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,36 @@
-# Compiled class file
-*.class
+# Angular build output
+/dist/
+/out-tsc/
+/.angular/
 
-# Log file
-*.log
+# Node dependencies
+/node_modules/
 
-# BlueJ files
-*.ctxt
+# Environment files
+.env
+.env.*.local
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Compiled output
+*.tsbuildinfo
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Coverage reports
+/coverage/
+
+# Misc
+*.swp
+*.tmp
